--- a/styles/main.css
+++ b/styles/main.css
@@ -97,8 +97,7 @@
 }
 @media only screen and (max-width: 557px) {
   #logros{
-    padding-top: 0em;
-    height:auto;
+    display: none;
   }
 }
 @media only screen and (max-width: 768px) {
